; ModuleID = '/home/carl/AnghaBench/nodemcu-firmware/app/modules/extr_bme680.c_w8u.c'
source_filename = "/home/carl/AnghaBench/nodemcu-firmware/app/modules/extr_bme680.c_w8u.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@bme680_i2c_id = common dso_local global i32 0, align 4
@bme680_i2c_addr = common dso_local global i32 0, align 4
@PLATFORM_I2C_DIRECTION_TRANSMITTER = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32)* @w8u to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @w8u(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  %6 = load i32, i32* @bme680_i2c_id, align 4
  %7 = call i32 @platform_i2c_send_start(i32 %6)
  %8 = load i32, i32* @bme680_i2c_id, align 4
  %9 = load i32, i32* @bme680_i2c_addr, align 4
  %10 = load i32, i32* @PLATFORM_I2C_DIRECTION_TRANSMITTER, align 4
  %11 = call i32 @platform_i2c_send_address(i32 %8, i32 %9, i32 %10)
  %12 = load i32, i32* @bme680_i2c_id, align 4
  %13 = load i32, i32* %4, align 4
  %14 = call i32 @platform_i2c_send_byte(i32 %12, i32 %13)
  %15 = load i32, i32* @bme680_i2c_id, align 4
  %16 = load i32, i32* %5, align 4
  %17 = call i32 @platform_i2c_send_byte(i32 %15, i32 %16)
  %18 = load i32, i32* @bme680_i2c_id, align 4
  %19 = call i32 @platform_i2c_send_stop(i32 %18)
  %20 = load i32, i32* %3, align 4
  ret i32 %20
}

declare dso_local i32 @platform_i2c_send_start(i32) #1

declare dso_local i32 @platform_i2c_send_address(i32, i32, i32) #1

declare dso_local i32 @platform_i2c_send_byte(i32, i32) #1

declare dso_local i32 @platform_i2c_send_stop(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
